tests/baselines/reference/optionalArgsWithDefaultValues.errors.txt
==== tests/cases/compiler/optionalArgsWithDefaultValues.ts (4 errors) ====
    function foo(x: number, y?:boolean=false, z?=0) {}
    
    class CCC {
        public foo(x: number, y?:boolean=false, z?=0) {}
        static foo2(x: number, y?:boolean=false, z?=0) {}
    }
    
    var a = (x?=0) => { return 1; };
               ~
!!! error TS1003: Identifier expected.
                 ~
!!! error TS1005: ':' expected.
                   ~~
!!! error TS1005: ';' expected.
             ~
!!! error TS2095: Could not find symbol 'x'.
    var b = (x, y?:number = 2) => { x; };